[package]
name = "memmodpp"
version = "1.0.0"

[lib]
name = "memmodpp"
path = "MemoryModule/lib.rs"

[[bin]]
name = "test_mmod"
path = "test/bin.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2.124"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features=["iphlpapi","heapapi","fileapi","winbase","userenv","handleapi"] }